AP-5203 Checkout - Shipping form Functionality 	* jQuery plugin wrapping client-side checkout functionality and navigation 	* Set state and update CSS on submit, edit, etc... 	* Shipping form submit with AJAX 	* Show Summary results 	* Ensure "billing same as..." checkbox shows/hides correct billing form on shipping submit 	* Update browser history with History API to enable back button 	* Allow "Edit" to "go back" to edit form.

--- a/app_storefront_base/cartridge/client/scss/default/checkout/checkout.scss
+++ b/app_storefront_base/cartridge/client/scss/default/checkout/checkout.scss
@@ -10,6 +10,10 @@ $checkout-font-weight: 600;
 }
 
 .billing-address {
+    display: block;
+}
+
+.billing-address.same-as-shipping {
     display: none;
 }
 
@@ -41,6 +45,10 @@ $checkout-font-weight: 600;
 .edit-button {
     color: $brand-color;
     float: right;
+    cursor: pointer;
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .grand-total-label {
@@ -103,3 +111,94 @@ $checkout-font-weight: 600;
 .summary-details {
     font-size: 0.938em;
 }
+
+.data-checkout-stage {
+
+    // Initial states ------------------------
+    &[data-checkout-stage] {
+
+        .card.payment-summary,
+        .shipping-summary {
+            display: none;
+        }
+
+        button {
+            display: none;
+        }
+    }
+
+    // Shipping ------------------------------
+    &[data-checkout-stage=shipping] {
+
+        .card.payment-form {
+            display: none;
+        }
+
+        button.submit-shipping {
+            display: block;
+        }
+    }
+
+    // Payment -------------------------------
+    &[data-checkout-stage=payment] {
+
+        .card.shipping-form {
+            display: none;
+        }
+
+        .card.payment-form,
+        .shipping-summary {
+            display: block;
+        }
+
+        button.submit-payment {
+            display: block;
+        }
+    }
+
+    // Place Order -----------------------------
+    &[data-checkout-stage=placeOrder] {
+
+        .card.shipping-form,
+        .card.payment-form {
+            display: none;
+        }
+
+        .card.payment-summary,
+        .shipping-summary {
+            display: block;
+        }
+
+        .card.shipping-form {
+            display: none;
+        }
+
+        button.place-order {
+            display: block;
+        }
+    }
+
+    &[data-checkout-stage=submitted] {
+
+        .card.shipping-form,
+        .card.payment-form {
+            display: none;
+        }
+
+        .card.payment-summary,
+        .shipping-summary {
+            display: block;
+        }
+
+        .card.shipping-form {
+            display: none;
+        }
+
+        button.place-order {
+            display: none;
+        }
+    }
+}
+
+
+
